@@ -1,3 +1,9 @@
+2010-02-24  Ivan Maidanski <ivmai@mail.ru> (really Jack Andrews)
+
+	* CMakeLists.txt: New file (adding CMake support).
+	* tests/CMakeLists.txt: Ditto.
+	* doc/README.cmake: Ditto.
+
 2010-02-19  Ivan Maidanski <ivmai@mail.ru> (really Bruce Mitchener)
 
 	* configure.ac (darwin): Don't define HAS_PPC_THREAD_STATE...
